fix doc & add docker compatibility
