# docs/swagger.yaml
@@ -476,37 +476,6 @@ paths:
       tags:
       - tag
   /user:
-    post:
-      consumes:
-      - application/json
-      description: 미리 가입되어있어야 하거나 비밀번호 같은 것 필요없습니다. 그냥 이메일만 보내면 그에 맞는 토큰을 생성해 돌려줍니다.
-      parameters:
-      - description: email to login
-        format: email
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/user.SignInBody'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/user.JwtAccessToken'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/common.ErrorMessage'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/common.ErrorMessage'
-      summary: sign in
-      tags:
-      - user
-  /user/:
     get:
       description: user id를 통해 유저 정보를 반환합니다.
       parameters:
@@ -535,6 +504,37 @@ paths:
           schema:
             $ref: '#/definitions/common.ErrorMessage'
       summary: get user
+      tags:
+      - user
+  /user/sign-in:
+    post:
+      consumes:
+      - application/json
+      description: 미리 가입되어있어야 하거나 비밀번호 같은 것 필요없습니다. 그냥 이메일만 보내면 그에 맞는 토큰을 생성해 돌려줍니다.
+      parameters:
+      - description: email to login
+        format: email
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/user.SignInBody'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/user.JwtAccessToken'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.ErrorMessage'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.ErrorMessage'
+      summary: sign in
       tags:
       - user
 swagger: "2.0"
